# send-me-research

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  digest_profiles.example.json  pyproject.toml
.github/workflows/: daily-digest-hosted.yml  daily-digest.yml  example-pages.yml
examples/digest-example/: digest.html
scripts/: print_codex_auth_secrets.sh  refresh_github_codex_auth_secret.sh  render_example_digest.py  restore_state_artifact.py  sync_github_hosted_secrets.sh
src/send_me_research/: cli.py  codex_rank.py  config.py  dedupe.py  mail.py  models.py  normalize.py  render.py  service.py  sources.py  state.py
state/: digests_sent.jsonl  papers_seen.jsonl
templates/: digest.html.j2
tests/: test_codex_rank.py  test_config.py  test_dedupe.py  test_mail.py  test_normalize.py  test_render.py  test_service.py  test_sources.py  test_state.py
