[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "send-me-research"
version = "0.1.0"
description = "Daily Codex-backed research digest for LLMs, agents, robotics, and cyber papers."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "Jinja2>=3.1.4,<4.0.0",
  "pypdf>=6.9.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
send-me-research = "send_me_research.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
